test/files/neg/t8079a.check
t8079a.scala:3: error: contravariant type I occurs in covariant position in type C.this.X of value b
  def f2(b: X): Unit
         ^
1 error
